# WhoLLM

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  check_integration.sh  hacs.json  package-lock.json  package.json  playwright.config.ts  pyproject.toml  setup_local_testing.sh
.github/workflows/: test.yml  validate.yml
automations/: vision_on_motion.yaml
beta-testers/: README.md  run_all_testers.py
beta-testers/testers/: alice_studio.yaml  bob_family.yaml  carol_smartenthusiast.yaml  dan_minimal.yaml  eve_remoteworker.yaml
blueprints/: README.md  follow_me_music.yaml  goodbye_routine.yaml  room_based_climate.yaml  welcome_home_lights.yaml
custom_components/llm_presence/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  event_logger.py  habits.py  manifest.json  ml_predictor.py  sensor.py  services.yaml  strings.json
custom_components/whollm/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  event_logger.py  habits.py  history.py  manifest.json  ml_predictor.py  notifications.py  sensor.py  (+5 more)
dashboard/: README.md  docker-compose.yml  index.html  llm-presence-dashboard.yaml  nginx.conf  whollm-dashboard.yaml
docs/: ML_ENHANCEMENT_PROPOSAL.md
e2e/: dashboard.spec.ts
examples/: README.md  example_automation.yaml
scripts/: extract_training_data.py  merge_logbook_data.py  prepare_ml_training_data.py  sync_training_data.sh  train_model.py  train_per_person_models.py
tests/: __init__.py  conftest.py  test_binary_sensors.py  test_confidence_scoring.py  test_config_flow.py  test_coordinator.py  test_device_tracker.py  test_edge_cases.py  test_event_logger.py  test_habits.py  test_history.py  test_integration.py  test_integration_setup.py  test_ml_predictor.py  test_multi_providers.py  test_notifications.py  test_providers.py  test_providers_crewai.py  test_sensors.py  test_services.py  test_vision.py  test_zones.py
www/: whollm-card.js
(+12 files in other folders)
